# libnfc

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  HACKING  HACKING.md  Makefile  Makefile.am  NEWS  NEWS.md  README  README-Windows.md  README-Windows.txt  README.TXT  README.md  acr122.c  acr122.h  anticol.c  appveyor.yml  autogen.sh  bitutils.c  bitutils.h  config.h.cmake  configure.ac  defines.h  dev_acr122.h  dev_pn531.c  devices.h  libnfc.c  libnfc.conf.sample  libnfc.h  libnfc.pc.in  list.c  log4crc  make_release.sh  manual-test-results.txt  mfread.c  mfwrite.c  (+8 more)
automake/: autogen.sh  configure.ac
cmake/: FixBundle.cmake.in  LibNFCConfig.cmake.in  LibNFCConfigVersion.cmake.in  Makefile.am  UseLibNFC.cmake  config.h.in  config_posix.h.cmake  config_windows.h.cmake
cmake/modules/: FindLIBUSB.cmake  FindPCRE.cmake  FindPCSC.cmake  LibnfcDrivers.cmake  Makefile.am  UseDoxygen.cmake
cmake_modules/: FindLIBUSB.cmake  FindPCSC.cmake  LibnfcDrivers.cmake  Makefile.am  UseDoxygen.cmake
contrib/: Makefile.am  windows.h
contrib/devd/: Makefile.am  (+1 more)
debian/: .gitignore  changelog  control  copyright  libnfc-bin.install  libnfc-dev.install  libnfc-examples.install  libnfc-pn53x-examples.install  libnfc0.install  libnfc2.install  libnfc3.install  libnfc4.install  libnfc4.symbols  nfc-tools.install  rules  watch
examples/: CMakeLists.txt  Makefile.am  mifare.c  mifare.h  nfc-anticol.1  nfc-anticol.c  nfc-barcode.1  nfc-barcode.c  nfc-dep-initiator.1  nfc-dep-initiator.c  nfc-dep-target.1  nfc-dep-target.c  nfc-detect-chinese-magic-card.c  nfc-emulate-forum-tag2.1  nfc-emulate-forum-tag2.c  nfc-emulate-forum-tag4.1  nfc-emulate-forum-tag4.c  nfc-emulate-ndef.c  nfc-emulate-tag.1  nfc-emulate-tag.c  nfc-emulate-uid.1  nfc-emulate-uid.c  nfc-emulate.1  nfc-emulate.c  nfc-list.1  nfc-list.c  nfc-mfclassic.1  nfc-mfclassic.c  nfc-mfsetuid.1  nfc-mfsetuid.c  nfc-mfultralight.1  nfc-mfultralight.c  nfc-poll.1  nfc-poll.c  nfc-relay-picc.c  nfc-relay.1  nfc-relay.c  nfc-sam.1  nfc-sam.c  nfc-st25tb-info.1  (+14 more)
examples/doc/: quick_start_example1.c  quick_start_example2.c
examples/pn53x-tamashell-scripts/: ASK_LoGO_LEDs.cmd  Makefile.am  ReadMobib.sh  ReadNavigo.sh  UltraLightRead.cmd  UltraLightReadWrite.cmd
libnfc/: CMakeLists.txt  Makefile.am  additional-pages.dox  bitutils.c  bitutils.h  buses.h  chips.h  conf.c  conf.h  drivers.h  iso14443-subr.c  iso7816.h  log-internal-win32.c  log-internal.c  log-internal.h  log-log4c.c  log-printf.c  log.c  log.h  log_posix.c  log_win32.c  mirror-subr.c  mirror-subr.h  nfc-device.c  nfc-emulation.c  nfc-internal.c  nfc-internal.h  nfc.c  stdlib-win32.c  target-subr.c  target-subr.h  timing.c  timing.h
libnfc/buses/: Makefile.am  empty.c  i2c.c  i2c.h  libusb-compat-core.c  libusb-compat-usb.h  libusb-compat-usbi.h  spi.c  spi.h  spi_posix.c  uart-win32.c  uart.c  uart.h  uart_posix.c  uart_win32.c  usbbus.c  usbbus.h
libnfc/chips/: Makefile.am  pn53x-internal.h  pn53x.c  pn53x.h  rc522-internal.h  rc522.c  rc522.h
libnfc/drivers/: Makefile.am  acr122.c  acr122.h  acr122_pcsc.c  acr122_pcsc.h  acr122_usb.c  acr122_usb.h  acr122s.c  acr122s.h  arygon.c  arygon.h  libnfc_nci_support.h  pcsc.c  pcsc.h  pn531_usb.c  pn531_usb.h  pn532_i2c.c  pn532_i2c.h  pn532_spi.c  pn532_spi.h  pn532_uart.c  pn532_uart.h  pn533_usb.c  pn533_usb.h  pn53x_usb.c  pn53x_usb.h  pn71xx.c  pn71xx.h  rc522_uart.c  rc522_uart.h
linux/: Makefile
m4/: libnfc_check_libusb.m4  libnfc_check_pcsc.m4  libnfc_drivers.m4  readline.m4
macosx/: Makefile
src/: CMakeLists.txt  Makefile.am  additional-pages.dox  anticol.c  bitutils.c  bitutils.h  defines.h  dev_acr122.c  dev_acr122.h  dev_arygon.c  dev_arygon.h  dev_pn531.c  dev_pn531.h  dev_pn532_uart.c  dev_pn532_uart.h  dev_pn533.c  dev_pn533.h  devices.h  emulate.c  initiator.c  libnfc.c  libnfc.h  list.c  messages.h  mftool.c  mfultool.c  mifaretag.h  nfc-emulate.1  nfc-mftool.1  relay.c  rs232.c  rs232.h  target.c  types.h
src/examples/: CMakeLists.txt  Makefile.am  mifaretag.h  mifareultag.h  nfc-anticol.1  nfc-anticol.c  nfc-emulate.1  nfc-emulate.c  nfc-list.1  nfc-list.c  nfc-mfclassic.1  nfc-mfclassic.c  nfc-mftool.1  nfc-mftool.c  nfc-mfultool.1  nfc-mfultool.c  nfc-mfultralight.1  nfc-mfultralight.c  nfc-relay.c  nfcip-initiator.c  nfcip-target.c
src/examples/doc/: quick_start_example1.c
src/include/: CMakeLists.txt  Makefile.am
src/include/nfc/: Makefile.am  nfc-types.h  nfc.h
src/lib/: CMakeLists.txt  Makefile.am  bitutils.c  bitutils.h  buses.h  chips.h  drivers.h  nfc-defines.h  nfc-types.h  nfc.c  nfc.h  types.h
src/lib/buses/: CMakeLists.txt  Makefile.am  uart.c  uart.h
src/lib/chips/: Makefile.am  pn53x.c  pn53x.h
src/lib/drivers/: CMakeLists.txt  Makefile.am  acr122.c  acr122.h  arygon.c  arygon.h  pn531.c  pn531.h  pn531_usb.c  pn531_usb.h  pn532_uart.c  pn532_uart.h  pn533.c  pn533.h  pn533_usb.c  pn533_usb.h  pn53x_usb.c  pn53x_usb.h
test/: Makefile.am  run-test.sh  test_access.c  test_access_storm.c  test_dep.c  test_dep_active.c  test_dep_passive.c  test_device_modes_as_dep.c  test_register_access.c  test_register_endianness.c
utils/: CMakeLists.txt  Makefile.am  crapto1.c  crapto1.h  crypto1.c  jewel.c  jewel.h  mfcuk.c  mfcuk.h  mfcuk_finger.c  mfcuk_finger.h  mfcuk_mifare.c  mfcuk_mifare.h  mfcuk_utils.c  mfcuk_utils.h  mifare.c  mifare.h  nfc-barcode.1  nfc-barcode.c  nfc-emulate-forum-tag2.1  nfc-emulate-forum-tag2.c  nfc-emulate-forum-tag4.1  nfc-emulate-forum-tag4.c  nfc-jewel.1  nfc-jewel.c  nfc-list.1  nfc-list.c  nfc-mfclassic.1  nfc-mfclassic.c  nfc-mfsetuid.c  nfc-mfultralight.1  nfc-mfultralight.c  nfc-probe.c  nfc-read-forum-tag3.1  nfc-read-forum-tag3.c  nfc-relay-picc.1  nfc-relay-picc.c  nfc-scan-device.1  nfc-scan-device.c  nfc-utils.c  (+3 more)
utils/mfcuk/: mifare.c  mifare.h  nfc-utils.c
win32/: Makefile  WINSCARD.LIB  anticol.vcproj  emulate.vcproj  libnfc.def  libnfc.sln  libnfc.vcproj  list.vcproj  mfread.vcproj  mftool.vcproj  mfwrite.vcproj  relay.vcproj  simulate.vcproj
win32bin/: libnfc.lib
windows/: Makefile  version.rc.in
(+68 files in other folders)
